# kinitro-metaworld-agent

./: .gitattributes  .gitignore  README.md  agent.capnp  agent.py  agent_interface.py  agent_sac.py  agent_server.py  checkpoint.py  evaluation.py  example_sac_usage.py  main.py  metaworld_types.py  pyproject.toml  run.py  train.py  train_ppo_model.py  train_sac_model.py
checkpoints/mt50_ppo_42/checkpoints/1099950/: _CHECKPOINT_METADATA
checkpoints/mt50_ppo_42/checkpoints/1099950/agent/: _sharding  manifest.ocdbt
checkpoints/mt50_ppo_42/checkpoints/1099950/env_states/: metadata
checkpoints/mt50_ppo_42/checkpoints/1099950/metadata/: metadata
checkpoints/mt50_ppo_42/checkpoints/1099950/metrics/: metrics
checkpoints/mt50_ppo_42/checkpoints/1199950/: _CHECKPOINT_METADATA
checkpoints/mt50_ppo_42/checkpoints/1199950/agent/: _METADATA  manifest.ocdbt
checkpoints/mt50_ppo_42/checkpoints/1199950/env_states/: metadata
checkpoints/mt50_ppo_42/checkpoints/1199950/metadata/: metadata
checkpoints/mt50_ppo_42/checkpoints/799950/: _CHECKPOINT_METADATA
checkpoints/mt50_ppo_42/checkpoints/899950/: _CHECKPOINT_METADATA
checkpoints/mt50_ppo_42/checkpoints/999950/: _CHECKPOINT_METADATA
config/: envs.py  networks.py  optim.py  rl.py  utils.py
envs/: __init__.py  metaworld.py  wrappers.py
monitoring/: utils.py
nn/: __init__.py  base.py  care.py  film.py  moore.py  multi_head.py  paco.py  soft_modules.py
optim/: gradnorm.py
rl/: augmentations.py  buffers.py  networks.py
rl/algorithms/: __init__.py  base.py  drq.py  mamltrpo.py  mtsac.py  ppo.py  rl2.py  sac.py  utils.py
(+43 files in other folders)
